# slurmwatch

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  issues.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
assets/: demo.tape  render_demo.py
src/slurmwatch/: __init__.py  _version.py  cli.py  collector.py  config.py  demo.py  exceptions.py  model.py  pending.py  remote.py  slurm.py  tui.py
tests/: conftest.py  test_cli.py  test_collector.py  test_pending.py  test_remote.py  test_slurm.py  test_tui.py
