[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slurmwatch"
description = "Live, process-isolated node-local hardware telemetry for active Slurm jobs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Youzhi", email = "youzhi@example.com" }]
keywords = ["slurm", "hpc", "monitoring", "gpu", "tui"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Hardware",
    "Typing :: Typed",
]
dependencies = [
    "textual>=0.41,<1",
    "pynvml>=11.5,<12",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/youzhi/slurmwatch"
Repository = "https://github.com/youzhi/slurmwatch"
Documentation = "https://github.com/youzhi/slurmwatch#readme"

[project.scripts]
slurmwatch = "slurmwatch.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "ruff>=0.3",
    "mypy>=1.8",
    "build>=1.0",
    "twine>=4.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["slurmwatch*"]

[tool.setuptools.package-data]
slurmwatch = ["py.typed"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "ARG", "C4", "T20"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
strict = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
