[build-system]
requires = ["setuptools>=77", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "slurmwatch"
description = "Live, process-isolated node-local hardware telemetry for active Slurm jobs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Youzhi Yu", email = "yuyouzhi666@icloud.com" }]
keywords = ["slurm", "hpc", "monitoring", "gpu", "tui"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Hardware",
    "Typing :: Typed",
]
dependencies = [
    # >=0.86 is where built-in themes landed (the UI selects "tokyo-night") and
    # covers every widget the dashboard uses (Sparkline, DataTable, Digits,
    # Rule, Header/Footer). A lower floor would resolve to a visibly degraded
    # UI on a fresh install with no error. Tested against 0.89 and 8.x.
    "textual>=0.86,<9",
    # Pure-Python NVML bindings. Installs on any machine (no GPU/driver needed)
    # and no-ops at runtime on CPU-only nodes, so one install works across a
    # mixed cluster; GPU monitoring auto-activates wherever an NVIDIA GPU exists.
    "pynvml>=11.5,<12",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/PursuitOfDataScience/slurmwatch"
Repository = "https://github.com/PursuitOfDataScience/slurmwatch.git"
Documentation = "https://github.com/PursuitOfDataScience/slurmwatch#readme"
Issues = "https://github.com/PursuitOfDataScience/slurmwatch/issues"

[project.scripts]
slurmwatch = "slurmwatch.cli:main"

[project.optional-dependencies]
# pynvml is now a hard dependency (see [project].dependencies); this extra is
# kept as a no-op alias so existing `pip install "slurmwatch[nvidia]"` still works.
nvidia = []
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "ruff>=0.3",
    "mypy>=1.8",
    "build>=1.0",
    "twine>=4.0",
    "setuptools-scm>=8",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["slurmwatch*"]

[tool.setuptools_scm]

[tool.setuptools.package-data]
slurmwatch = ["py.typed"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "ARG", "C4", "T20"]

[tool.ruff.lint.per-file-ignores]
# Test doubles mirror the pynvml C API (mixedCase) and intentionally ignore
# arguments they must accept to match real signatures.
"tests/*" = ["ARG", "N802", "N815"]
# Developer scripts report progress on stdout.
"assets/*" = ["T201"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
strict = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["slurmwatch"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
